// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given a bigger example converts it to render data 1`] = `
Array [
  Array [
    Object {
      "ancestryIds": Array [
        "0",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 1,
        "type": 1,
      },
      "id": 1,
      "matrixPosition": Array [
        0,
        0,
      ],
      "parentId": 0,
      "parentUniqueId": "0",
      "treePath": Array [
        0,
      ],
      "uniqueId": "1",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "type": 2,
      },
      "id": 4,
      "matrixPosition": Array [
        2,
        1,
      ],
      "parentId": 0,
      "parentUniqueId": "0",
      "treePath": Array [
        1,
      ],
      "uniqueId": "4",
      "y": 2,
    },
  ],
  Array [
    Object {
      "ancestryIds": Array [
        "0",
        "1",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 2,
        "type": 1,
      },
      "id": 2,
      "matrixPosition": Array [
        1,
        0,
      ],
      "parentId": 1,
      "parentUniqueId": "1",
      "treePath": Array [
        0,
        0,
      ],
      "uniqueId": "2",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "1",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 3,
        "type": 2,
      },
      "id": 3,
      "matrixPosition": Array [
        2,
        1,
      ],
      "parentId": 1,
      "parentUniqueId": "1",
      "treePath": Array [
        0,
        1,
      ],
      "uniqueId": "3",
      "y": 1,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 5,
        "type": 1,
      },
      "id": 5,
      "matrixPosition": Array [
        2,
        2,
      ],
      "parentId": 4,
      "parentUniqueId": "4",
      "treePath": Array [
        1,
        0,
      ],
      "uniqueId": "5",
      "y": 2,
    },
  ],
]
`;

exports[`given a bigger example converts it to render data with collapsed children 1`] = `
Array [
  Array [
    Object {
      "ancestryIds": Array [
        "0",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 1,
        "type": 1,
      },
      "id": 1,
      "matrixPosition": Array [
        0,
        0,
      ],
      "parentId": 0,
      "parentUniqueId": "0",
      "treePath": Array [
        0,
      ],
      "uniqueId": "1",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "type": 2,
      },
      "id": 4,
      "matrixPosition": Array [
        2,
        1,
      ],
      "parentId": 0,
      "parentUniqueId": "0",
      "treePath": Array [
        1,
      ],
      "uniqueId": "4",
      "y": 2,
    },
  ],
  Array [
    Object {
      "ancestryIds": Array [
        "0",
        "1",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 2,
        "type": 1,
      },
      "id": 2,
      "matrixPosition": Array [
        1,
        0,
      ],
      "parentId": 1,
      "parentUniqueId": "1",
      "treePath": Array [
        0,
        0,
      ],
      "uniqueId": "2",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "1",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 3,
        "type": 2,
      },
      "id": 3,
      "matrixPosition": Array [
        2,
        1,
      ],
      "parentId": 1,
      "parentUniqueId": "1",
      "treePath": Array [
        0,
        1,
      ],
      "uniqueId": "3",
      "y": 1,
    },
  ],
]
`;

exports[`given a real example general tree converts it to render data 1`] = `
Array [
  Array [
    Object {
      "ancestryIds": Array [
        "0",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "type": 1,
      },
      "id": 1,
      "matrixPosition": Array [
        0,
        0,
      ],
      "parentId": 0,
      "parentUniqueId": "0",
      "treePath": Array [
        0,
      ],
      "uniqueId": "4",
      "y": 0,
    },
  ],
  Array [
    Object {
      "ancestryIds": Array [
        "0",
        "4",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 14,
        "type": 1,
      },
      "id": 2,
      "matrixPosition": Array [
        1,
        0,
      ],
      "parentId": 1,
      "parentUniqueId": "4",
      "treePath": Array [
        0,
        0,
      ],
      "uniqueId": "14",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 15,
        "type": 1,
      },
      "id": 4,
      "matrixPosition": Array [
        3,
        1,
      ],
      "parentId": 1,
      "parentUniqueId": "4",
      "treePath": Array [
        0,
        1,
      ],
      "uniqueId": "15",
      "y": 1,
    },
  ],
  Array [
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "14",
      ],
      "data": Object {
        "id": 45,
        "type": 0,
      },
      "id": 3,
      "matrixPosition": Array [
        2,
        0,
      ],
      "parentId": 2,
      "parentUniqueId": "14",
      "treePath": Array [
        0,
        0,
        0,
      ],
      "uniqueId": "45",
      "y": 0,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 17,
        "scrollAxis": 1,
        "type": 1,
      },
      "id": 5,
      "matrixPosition": Array [
        3,
        1,
      ],
      "parentId": 4,
      "parentUniqueId": "15",
      "treePath": Array [
        0,
        1,
        0,
      ],
      "uniqueId": "17",
      "y": 1,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
      ],
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 19,
        "scrollAxis": 1,
        "type": 1,
      },
      "id": 14,
      "matrixPosition": Array [
        4,
        2,
      ],
      "parentId": 4,
      "parentUniqueId": "15",
      "treePath": Array [
        0,
        1,
        1,
      ],
      "uniqueId": "19",
      "y": 9,
    },
  ],
  Array [
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 22,
        "type": 0,
      },
      "id": 6,
      "matrixPosition": Array [
        3,
        0,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        0,
      ],
      "uniqueId": "22",
      "y": 1,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 23,
        "type": 0,
      },
      "id": 7,
      "matrixPosition": Array [
        4,
        1,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        1,
      ],
      "uniqueId": "23",
      "y": 2,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 24,
        "type": 0,
      },
      "id": 8,
      "matrixPosition": Array [
        4,
        2,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        2,
      ],
      "uniqueId": "24",
      "y": 3,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 25,
        "type": 0,
      },
      "id": 9,
      "matrixPosition": Array [
        4,
        3,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        3,
      ],
      "uniqueId": "25",
      "y": 4,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 26,
        "type": 0,
      },
      "id": 10,
      "matrixPosition": Array [
        4,
        4,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        4,
      ],
      "uniqueId": "26",
      "y": 5,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 27,
        "type": 0,
      },
      "id": 11,
      "matrixPosition": Array [
        4,
        5,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        5,
      ],
      "uniqueId": "27",
      "y": 6,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 28,
        "type": 0,
      },
      "id": 12,
      "matrixPosition": Array [
        4,
        6,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        6,
      ],
      "uniqueId": "28",
      "y": 7,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "17",
      ],
      "data": Object {
        "id": 29,
        "type": 0,
      },
      "id": 13,
      "matrixPosition": Array [
        4,
        7,
      ],
      "parentId": 5,
      "parentUniqueId": "17",
      "treePath": Array [
        0,
        1,
        0,
        7,
      ],
      "uniqueId": "29",
      "y": 8,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 21,
        "type": 0,
      },
      "id": 15,
      "matrixPosition": Array [
        4,
        8,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        0,
      ],
      "uniqueId": "21",
      "y": 9,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "disabled": true,
        "id": 20,
        "type": 0,
      },
      "id": 16,
      "matrixPosition": Array [
        4,
        9,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        1,
      ],
      "uniqueId": "20",
      "y": 10,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 30,
        "type": 0,
      },
      "id": 17,
      "matrixPosition": Array [
        4,
        10,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        2,
      ],
      "uniqueId": "30",
      "y": 11,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 31,
        "type": 0,
      },
      "id": 18,
      "matrixPosition": Array [
        4,
        11,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        3,
      ],
      "uniqueId": "31",
      "y": 12,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "disabled": true,
        "id": 32,
        "type": 0,
      },
      "id": 19,
      "matrixPosition": Array [
        4,
        12,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        4,
      ],
      "uniqueId": "32",
      "y": 13,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "disabled": true,
        "id": 33,
        "type": 0,
      },
      "id": 20,
      "matrixPosition": Array [
        4,
        13,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        5,
      ],
      "uniqueId": "33",
      "y": 14,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "disabled": true,
        "id": 34,
        "type": 0,
      },
      "id": 21,
      "matrixPosition": Array [
        4,
        14,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        6,
      ],
      "uniqueId": "34",
      "y": 15,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 35,
        "type": 0,
      },
      "id": 22,
      "matrixPosition": Array [
        4,
        15,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        7,
      ],
      "uniqueId": "35",
      "y": 16,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 36,
        "type": 0,
      },
      "id": 23,
      "matrixPosition": Array [
        4,
        16,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        8,
      ],
      "uniqueId": "36",
      "y": 17,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 37,
        "type": 0,
      },
      "id": 24,
      "matrixPosition": Array [
        4,
        17,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        9,
      ],
      "uniqueId": "37",
      "y": 18,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 38,
        "type": 0,
      },
      "id": 25,
      "matrixPosition": Array [
        4,
        18,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        10,
      ],
      "uniqueId": "38",
      "y": 19,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 39,
        "type": 0,
      },
      "id": 26,
      "matrixPosition": Array [
        4,
        19,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        11,
      ],
      "uniqueId": "39",
      "y": 20,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 40,
        "type": 0,
      },
      "id": 27,
      "matrixPosition": Array [
        4,
        20,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        12,
      ],
      "uniqueId": "40",
      "y": 21,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 41,
        "type": 0,
      },
      "id": 28,
      "matrixPosition": Array [
        4,
        21,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        13,
      ],
      "uniqueId": "41",
      "y": 22,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 42,
        "type": 0,
      },
      "id": 29,
      "matrixPosition": Array [
        4,
        22,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        14,
      ],
      "uniqueId": "42",
      "y": 23,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 43,
        "type": 0,
      },
      "id": 30,
      "matrixPosition": Array [
        4,
        23,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        15,
      ],
      "uniqueId": "43",
      "y": 24,
    },
    Object {
      "ancestryIds": Array [
        "0",
        "4",
        "15",
        "19",
      ],
      "data": Object {
        "id": 44,
        "type": 0,
      },
      "id": 31,
      "matrixPosition": Array [
        4,
        24,
      ],
      "parentId": 14,
      "parentUniqueId": "19",
      "treePath": Array [
        0,
        1,
        1,
        16,
      ],
      "uniqueId": "44",
      "y": 25,
    },
  ],
]
`;
